# gradio-apps

./: .gitpod.Dockerfile  .gitpod.yml  gitpod.Dockerfile  pyproject.toml  requirements.txt
chat-gpt/: app.py
find-diff-app/: app.py  main.py
image-caption/: app.py
qa_ret/: app.py
qa_retrieval/: app.py
whisper-app/: README.md  app.py  assets.py
